# OpenGLLearning

./: .gitignore  CMakeLists.txt  Makefile  OpenGLExample  main.cpp
glad/include/glad/: glad.h
include/: SDL2
include/glad/: glad.h
includes/filesystem/: filesystem.h
includes/glad/src/: glad.c
lib/: SDL2
programs/: coordinateSystems.cpp  draw2Triangles.cpp  lightMaterials.cpp  rainbowTriangle.cpp  texturedRect.cpp  transformedRect.cpp
shaders/fragment/: lightCube.frag  texturedRect.frag
shaders/vertex/: transformedRect.vert
src/: drawSquare.cpp  glad.c
src/tests/: drawSquare.cpp  drawTriangles.cpp
